<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/shopping_list_view_item_product_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_weight="3"
            android:text="@string/shop_text_view_products_lookup_code"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <TextView
            android:id="@+id/shopping_cart_item_qty_text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:text="@string/shop_text_view_products_count"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <TextView
            android:id="@+id/shopping_cart_item_qty_num"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/num_of_products"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/save_for_later_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveForLater"
            android:layout_marginLeft="60dp"
            android:gravity="center_horizontal"
            android:text="@string/save_for_later" />

        <TextView
            android:id="@+id/delete_from_cart_button"
            android:onClick="deleteFromCart"
            android:layout_marginLeft="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/button_delete" />

    </LinearLayout>
</LinearLayout>