<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uark.uarkregisterapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/text_view_employee_welcome"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_begin_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="beginTransactionButtonOnClick"
        android:text="@string/button_begin_transaction" />

    <Button
        android:id="@+id/button_product_sales_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_cashier_sales_report"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-191dp"
        android:onClick="productSalesReportButtonOnClick"
        android:text="@string/button_product_sales_report" />

    <Button
        android:id="@+id/button_cashier_sales_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="216dp"
        android:onClick="cashierSalesReportButtonOnClick"
        android:text="@string/button_cashier_sales_report" />

    <Button
        android:id="@+id/button_create_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="152dp"
        android:onClick="createEmployeeButtonOnClick"
        android:text="@string/button_create_employee" />

    <Button
        android:id="@+id/button_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp"
        android:onClick="logOutButtonOnClick"
        android:text="@string/button_log_out" />

    <Button
        android:id="@+id/ShoppingCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_product_sales_report"
        android:layout_centerHorizontal="true"
        android:text="@string/to_shopping_cart"
        android:onClick="shoppingCartOnClick"/>

</RelativeLayout>