<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uark.uarkregisterapp.ShoppingCart">

    <Button
        android:id="@+id/purchaseButton"
        android:onClick="purchaseOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="66dp"
        android:text="@string/purchase_button" />

    <TextView
        android:id="@+id/ItemsInCartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/purchaseButton"
        android:text="@string/items_in_cart"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget" />

    <TextView
        android:id="@+id/number_in_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ItemsInCartText"
        android:layout_marginStart="250dp"
        android:layout_toEndOf="@+id/ShoppingCartText"
        android:text="@integer/number_of_items_in_cart"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/noItemsInCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="184dp"
        android:text="@string/no_items_in_cart" />

    <TextView
        android:id="@+id/noItemsSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="91dp"
        android:text="@string/no_items_saved" />

    <LinearLayout
        android:id="@+id/ListViewLayout"
        android:layout_below="@+id/number_in_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_ListView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/ShoppingCartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/shopping_cart_text"
                android:textAppearance="@android:style/TextAppearance.Material.Large"/>

            <ListView
                android:id="@+id/shopping_cart_list"
                android:layout_below="@+id/ShoppingCartText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_ListView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/save_for_later_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/items_saved_for_later"
                android:textAppearance="@android:style/TextAppearance.Material.Large"/>

            <ListView
                android:id="@+id/saved_items_list"
                android:layout_below="@+id/save_for_later_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </RelativeLayout>

    </LinearLayout>

    <!--
    <TextView
        android:id="@+id/ShoppingCartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_in_cart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/shopping_cart_text" />

    <ListView
        android:id="@+id/shopping_cart_list"
        android:layout_below="@+id/ShoppingCartText"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
    -->
    <!--
    <TextView
        android:id="@+id/save_for_later_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopping_cart_list"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="170dp"
        android:text="@string/items_saved_for_later" />

    <ListView
        android:id="@+id/saved_items_list"
        android:layout_below="@+id/save_for_later_text_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    </ListView>
    -->
    <!--
    <TextView
        android:id="@+id/noItemsInCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="184dp"
        android:text="@string/no_items_in_cart" />

    <TextView
        android:id="@+id/noItemsSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="91dp"
        android:text="@string/no_items_saved" />
    -->

</RelativeLayout>